# resk.us

backend/: controller.py  pyproject.toml  repository.py
backend/helpers/: extract_data.py
backend/reports/: POP2022_Municipios_20230622.xls  datas.csv
frontend/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/: fires.json
frontend/assets/img/: profile
frontend/components/: BottomBar.vue  Button.vue  FireMap.vue  IconButton.vue  Map.vue  Menu.vue  MenuItem.vue  PopupContent.vue  SearchInput.vue  ShelterCard.vue  SplashScreen.vue  VerifiedIcon.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue  loading.vue  profile.vue  shelters.vue
frontend/stores/: app.ts
